--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.freefair.lombok" version "8.10"
 }
 
 group 'org.example'
@@ -20,6 +21,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.0'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0-rc1'
+    testImplementation 'org.aeonbits.owner:owner:1.0.4'
 
 }
 
